--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
 
 .photo
 {
-background-image: url('img/photo.jpg');
+background-image: url('img/photo_moi.jpg');
 background-size: cover;
 background-position: center;
 border-radius: 50%; 
